Reformulação da página

--- a/index.html
+++ b/index.html
@@ -4,59 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Landing Page</title>
+    <title>Sevem Shopping</title>
 </head>
 <body>
     <main>
-        <div class="titulo">
-            <h1>LANDING PAGE</h1>
-            <h2>E-Commerce</h2>
-        </div>
-        
-        <div class="div-main">
-            <nav>
-                <a href="#"><img src="img/menu.png" alt=""></a>
-                <a href="#">Home</a>
-                <a href="#">About</a>
-                <a href="#">Catalogue</a>
-                <a href="#">Promo</a>
-                <a href="#">Contact</a>
-            </nav>
-            <div class="div-main2">
-            <div class="div-left">
-                <div class="h1">
+        <nav>
+            <img src="#">
+            <a href="home.html">Acessar</a>
+        </nav>
 
-                    <h1 class="h1-1">LOVE</h1>
-                    <h1 class="h1-2">SHOPPING</h1>
+        <div class="div-main2">
+            <div class="div-left">
+                <div class="titulo">
+
+                    <div class="h1-1"><span>SEVEM</span></div>
+                    <div class="h1-2"><span>SHOPPING</span></div>
 
                 </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error praesentium, voluptates aliquid tempora impedit culpa ea animi.</p>
+                <p>Bem-vindo ao <strong>Sevem!</strong>
+                    Sua experiência de compras online começa aqui. Explore produtos incríveis, aproveite ofertas exclusivas e faça suas compras de forma fácil e rápida. Boas compras!</p>
                 
                 <div class="button">
-                    <button>See Catalogue</button>
-                    <h5>Get Discount 50% OFF</h5>
+                    <button>Em Promoção</button>
+                    <h5>Aproveite até 50% de desconto</h5>
                 </div>
                 <footer>
-                    <img class="buy" src="img/shopping-cart.png" alt="">
+                    <div>
+                        <h6>Redes sociais</h6>
 
-                    <h6>e-commerce</h6>
+                        <a href="#"><img class="social" src="img/icons/facebook.png" alt="facebook"></a>
 
-                    <a href="#"><img class="social" src="img/twitter.png" alt="x"></a>
-
-                    <a href="#"><img class="social" src="img/whatsapp.png" alt="whatsapp"></a>
-
-                    <a href="#"><img class="social" src="img/facebook.png" alt="facebook"></a>
-
-                    <a href="#"><img class="social" src="img/instagram.png" alt="instagran"></a>
-
+                        <a href="#"><img class="social" src="img/icons/instagram.png" alt="instagran"></a>
+                    </div>
                 </footer>
             </div>
 
             <div class="div-right">
                 <img src="img/pessoas.jpg" alt="">
             </div>
-            </div>
-
         </div>
     </main>
 </body>
