Adicionado imagem de logo

--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 <body>
     <main class="home">
         <div class="logo">
-            <img src="#" alt="Logo">
+            <img src="img/icons/logo-sevem.png" alt="Logo">
         </div>
         
         <div class="main-home">
