--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <nav>
-            <img src="#">
+            <img src="img/icons/logo-sevem.png">
             <a href="home.html">Acessar</a>
         </nav>
 
